[package]
name = "forza-quattro"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
find_folder = "0.3.0"
gfx_device_gl = "0.16.2"
piston = "0.55.0"
piston2d-gfx_graphics = "0.80.0"
piston2d-opengl_graphics = "0.83.0"
piston_window = "0.131.0"

[dependencies.piston2d-graphics]
version = "*"
features = ["glyph_cache_rusttype"]
